--- a/style.css
+++ b/style.css
@@ -1,24 +1,62 @@
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
 html {
-  font-size: 1em;
-  line-height: 1.5;
-  font-family: "Georgia", "Times New Roman", serif;
-  background-color: #faf9f7;
-  color: #1a1a1a;
+  -moz-text-size-adjust: none;
+  -webkit-text-size-adjust: none;
+  text-size-adjust: none;
+}
+
+body, h1, h2, h3, h4, p,
+figure, blockquote, dl, dd {
+  margin-block-end: 0;
 }
 
 body {
+  background-color: #faf9f7;
+  color: #1a1a1a;
+  font-size: 1em;
+  line-height: 1.5;
+  font-family: "Georgia", "Times New Roman", serif;
   max-width: 1200px;
-  margin: 0 auto;
+  min-height: 100vh;
   padding: 3rem 1rem;
+  margin: 0 auto;
 }
 
-/* Hoofdtitel */
-h1 {
-  font-size: clamp(3rem, 6vw, 4.5rem);
+h1, h2, h3, h4 {
   font-weight: 400;
   line-height: 1.1;
+  text-wrap: balance;
+}
+
+ul[role='list'],
+ol[role='list'] {
+  list-style: none;
+}
+
+a:not([class]) {
+  text-decoration-skip-ink: auto;
+  color: currentColor;
+}
+
+picture {
+  max-width: 100%;
+  display: block;
+}
+
+:target {
+  scroll-margin-block: 5ex;
+}
+
+h1 {
+  font-size: clamp(3rem, 6vw, 4.5rem);
   margin-bottom: 2em;
-max-width: 18ch;
+  max-width: 18ch;
 }
 
 h2 {
@@ -29,19 +67,12 @@ h2 {
 
 h3 {
   font-size: clamp(1.5rem, 4vw, 2rem);
-  font-weight: 600;
   margin-bottom: 0.5rem;
 }
 
 p {
   margin-bottom: 1.2rem;
   max-width: 65ch;
-}
-
-ul {
-  list-style: none;
-  padding: 0;
-  margin: 0;
 }
 
 li {
