--- a/style.css
+++ b/style.css
@@ -98,3 +98,19 @@ p {
 .disclaimer-content {
   margin-block-start: 0;
 }
+
+.work__logo--nlds{
+  width: 3rem;
+}
+
+.work__logo--ns{
+  width: 5rem;
+}
+
+.work__logo--nn{
+  width: 3rem;
+}
+
+.work__logo--randstad{
+  width: 5rem;
+}
