--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ body {
   font-family: "Georgia", "Times New Roman", serif;
   max-width: 1200px;
   min-height: 100vh;
-  padding: 1rem;
+  padding: 1rem 1rem 8rem 1rem;
   margin: 0 auto;
 }
 
