--- a/style.css
+++ b/style.css
@@ -91,8 +91,12 @@ picture {
   font-size: var(--jl-text-font-size-lg);
 }
 
-p {
+.paragraph, .paragraph-lead {
   max-width: 48ch;
+}
+
+.paragraph-lead {
+  var(--jl-text-font-size-lg)
 }
 
 .flow > * + * {
@@ -134,9 +138,9 @@ p {
 }
 
 .quote {
-  font-size: var(--jl-text-font-size-lg);
 }
 
 .quote__author {
+  font-size: var(--jl-text-font-size-sm)
   margin-block-start: 1rem;
 }
