Fix duplicate font-size declaration in quote__author

--- a/style.css
+++ b/style.css
@@ -143,6 +143,6 @@ picture {
 }
 
 .quote__author {
-  font-size: var(--jl-text-font-size-sm)
+  font-size: var(--jl-text-font-size-sm);
   margin-block-start: 1rem;
 }
