--- a/style.css
+++ b/style.css
@@ -123,6 +123,12 @@ picture {
   margin-block-start: 0;
 }
 
+.navigation-list {
+  display: flex;
+  column-gap: 1rem;
+  flex-flow: wrap;
+}
+
 .work__item {
   margin-block-start: 4rem;
 }
