--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@
   --jl-color-default-inverse-color-document: #faf9f7;
 }
 
+
 html {
   -moz-text-size-adjust: none;
   -webkit-text-size-adjust: none;
@@ -34,9 +35,10 @@ figure, blockquote, dl, dd {
 body {
   background-color: var(--jl-color-default-bg-document);
   color: var(--jl-color-default-color-document);
+  font-family: "Neuton", "Georgia", serif;
   font-size: var(--jl-text-font-size-md);
+  font-weight: 400;
   line-height: 1.5;
-  font-family: "Georgia", "Times New Roman", serif;
   max-width: 1200px;
   min-height: 100vh;
   padding: 1rem 1rem 8rem 1rem;
@@ -70,7 +72,7 @@ section {
 }
 
 .heading-display, .heading-1, .heading-2, .heading-3, .heading-4 {
-  font-weight: 400;
+  font-weight: 800;
   line-height: 1.1;
   text-wrap: balance;
 }
