--- a/style.css
+++ b/style.css
@@ -39,10 +39,10 @@ body {
   font-size: var(--jl-text-font-size-md);
   font-weight: 400;
   line-height: 1.5;
+  margin: 0 auto;
   max-width: 1200px;
   min-height: 100vh;
   padding: 1rem 1rem 8rem 1rem;
-  margin: 0 auto;
 }
 
 ul, ol {
@@ -54,13 +54,14 @@ li {
 }
 
 a:not([class]) {
-  text-decoration-skip-ink: auto;
   color: currentColor;
+  text-decoration-skip-ink: auto;
+  text-underline-offset: 1px;
 }
 
 picture {
-  max-width: 100%;
   display: block;
+  max-width: 100%;
 }
 
 :target {
