--- a/style.css
+++ b/style.css
@@ -45,10 +45,7 @@ body {
   font-size: var(--jl-text-font-size-md);
   font-weight: 400;
   line-height: 1.5;
-  margin: 0 auto;
-  max-width: 1200px;
   min-height: 100vh;
-  padding: 1rem 1rem 8rem 1rem;
 }
 ul, ol {
   padding-inline-start: 0;
@@ -68,6 +65,25 @@ picture {
 :target {
   scroll-margin-block: 5ex;
 }
+.grid {
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  grid-column-gap: 1rem;
+  margin: 0 1rem 8rem;
+}
+
+@media screen and (min-width: 74em) {
+  .grid {
+    grid-column-gap: 2rem;
+    max-width: 75rem;
+    margin: 0 auto 8rem;
+  }
+}
+
+.full-width {
+  grid-column: 1/14;
+}
+
 section {
   margin-block-start: 8rem;
 }
