--- a/style.css
+++ b/style.css
@@ -71,7 +71,6 @@ picture {
   grid-column-gap: 1rem;
   margin: 0 1rem 8rem;
 }
-
 @media screen and (min-width: 74em) {
   .grid {
     grid-column-gap: 2rem;
@@ -79,11 +78,9 @@ picture {
     margin: 0 auto 8rem;
   }
 }
-
 .full-width {
   grid-column: 1/14;
 }
-
 section {
   margin-block-start: 8rem;
 }
@@ -164,4 +161,9 @@ section {
 .quote__author {
   font-size: var(--jl-text-font-size-sm);
   margin-block-start: 1rem;
+}
+profile-picture {
+  margin-block-start: 4rem;
+  margin-block-end: -0.5rem;
+  width: 60%;
 }
