--- a/style.css
+++ b/style.css
@@ -69,13 +69,13 @@ picture {
   display: grid;
   grid-template-columns: repeat(12, 1fr);
   grid-column-gap: 1rem;
-  margin: 0 1rem 8rem;
+  margin: 0 1rem;
 }
 @media screen and (min-width: 74em) {
   .grid {
     grid-column-gap: 2rem;
     max-width: 75rem;
-    margin: 0 auto 8rem;
+    margin: 0 auto;
   }
 }
 .full-width {
