--- a/style.css
+++ b/style.css
@@ -71,11 +71,11 @@ picture {
   grid-column-gap: 1rem;
   margin: 0 1rem;
 }
-@media screen and (min-width: 74em) {
+@media screen and (min-width: 75rem) {
   .grid {
     grid-column-gap: 2rem;
     max-width: 75rem;
-    margin: 0 auto;
+    margin: 2rem auto 0;
   }
 }
 .full-width {
@@ -166,11 +166,15 @@ section {
   content: url('profile-light.png');
   margin-block-start: 4rem;
   margin-block-end: -0.5rem;
-  width: 60%;
+  width: 100%;
 }
-
 @media (prefers-color-scheme: dark) {
   .profile-picture {
     content: url('profile-dark.png');
+  }
+}
+@media screen and (min-width: 48rem) {
+  .profile-picture {
+    width: 60%;
   }
 }
