--- a/style.css
+++ b/style.css
@@ -135,6 +135,9 @@ section {
   column-gap: 1rem;
   flex-flow: wrap;
 }
+.navigation-list__link {
+  padding-block: 0.5rem;
+}
 .work__item {
   margin-block-start: 4rem;
 }
