small change to profile picture
Comment out mix-blend-mode and adjust opacity for dark mode profile picture.

--- a/style.css
+++ b/style.css
@@ -177,7 +177,8 @@ section {
 @media (prefers-color-scheme: dark) {
   .profile-picture {
     content: url('profile-dark.png');
-    mix-blend-mode: lighten;
+    /* mix-blend-mode: lighten;  */
+    opacity: 80%;
   }
 }
 @media screen and (min-width: 48rem) {
